[gd_scene load_steps=2 format=2]

[ext_resource path="res://TextAutoComplete.gd" type="Script" id=1]

[node name="TextAutoComplete" type="LineEdit"]
margin_right = 600.0
margin_bottom = 40.0
text = "Test YTest"
script = ExtResource( 1 )

[node name="AutoCompleteSelect" type="PopupMenu" parent="."]
unique_name_in_owner = true
show_behind_parent = true
margin_right = 29.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="text_changed" from="." to="." method="_on_TextAutoComplete_text_changed"]
[connection signal="index_pressed" from="AutoCompleteSelect" to="." method="_on_AutoCompleteSelect_index_pressed"]
